--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "nodemon": "^2.0.16"
   },
   "dependencies": {
+    "dotenv-safe": "^8.2.0",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3"
   }
 }
