--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "flowbite": "^1.4.7",
+    "flowbite-react": "^0.0.27",
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-icons": "^4.4.0",
+    "react-select": "^5.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
