--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^2.0.16"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
