--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "flowbite": "^1.4.7",
     "flowbite-react": "^0.0.27",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.33.0",
     "react-icons": "^4.4.0",
     "react-select": "^5.3.2"
   },
