--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.33.0",
+    "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0",
-    "react-select": "^5.3.2"
+    "react-select": "^5.3.2",
+    "react-toastify": "^9.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
