--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-hook-form": "^7.33.0",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "react-select": "^5.3.2",
     "react-toastify": "^9.0.5"
   },
