--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv-safe": "^8.2.0",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3"
